--- a/docs/_sass/planswell-overrides.scss
+++ b/docs/_sass/planswell-overrides.scss
@@ -1054,105 +1054,11 @@ input[type="checkbox"] {
       width: 100%;
     }
   }
-
-//   .header {
-//     height: 3.75rem;
-//     padding: 1.15rem 1.15rem 1.25rem;
-
-//     .header-inner {
-//       .logo {
-//         top: calc(50% - 6px);
-//         width: 152px;
-//         height: 18px;
-//       }
-
-//       .contact-text-link {
-//         font-size: $size-6;
-//       }
-//     }
-//   }
-
-//   section{
-//     .inner-column {
-//       padding: 1.25rem 1.85rem 3rem;
-//       margin-top: 3.75rem;
-//       overflow: scroll;
-
-//       &.onboarding-column::after {
-//         content: '';
-//         height: 150px;
-//       }
-//     }
-//   }
-
-//   .field {
-//     &.ordered-field {
-//       padding-left: 1.15rem;
-//     }
-//   }
-
-//   .box {
-//     padding: $box-padding-mobile;
-//   }
-
-//   .survey-footer {
-//     padding: 1.35rem 1.85rem 3rem;
-//     padding-bottom: 12%;
-
-//     .footer-link-wrapper {
-//       display: flex;
-//       justify-content: space-between;
-//     }
-
-//     .button-next-wrapper {
-//       margin-bottom: 0.75rem;
-//     }
-//     .progress-bar {
-//       height: 6px;
-//     }
-//   }
-
-//   //Elements
-//   .button {
-//     height: 2.35rem;
-//     font-size: $size-6;
-//     border-radius: $button-radius;
-//     padding-left: $button-padding-left-small;
-//     padding-right: $button-padding-left-small;
-
-//     &.is-button-next {
-//       padding-right: 1.15rem;
-//     }
-//   }
-
-//   .back-button-wrapper {
-//     margin-bottom: 1.5rem;
-
-//     .back-button {
-//       width: 19px;
-//       height: 14px;
-//     }
-//   }
-
-//   .table-heading-wrapper {
-//     h5 {
-//       &.recommendation-label {
-//         margin-right: 0rem;
-//       }
-//     }
-//   }
-
-//   //Form fields
-//   input[type="text"],
-//   input[type="number"],
-//   .select,
-//   .select select {
-//     width: 100%;
-//     font-size: $size-6;
-//   }
-
-//   input[type="number"] {
-//     min-width: 48px;
-//     width: 48px;
-//   }
 }
+
+// Stupid overrides for no reason
+strong, h1, h2, h3, h4 { &, .content & { font-weight: 700; } }
+h1 { &, .content & { font-size: 1.8rem; } } 
+h2 { &, .content & { font-size: 1.5rem; } } 
+h3 { &, .content & { font-size: 1.4rem; } } 
+h4 { &, .content & { font-size: 1.25rem; } } 
